tests/basic/post/assert/050.pan.out
tests/basic/post/assert/050.pan:4:1-4: error: cannot solve constraints of f50